cmake_minimum_required(VERSION 2.8)
PROJECT(util)

#AUX_SOURCE_DIRECTORY(./ SRC_LIST)
set(INC_LIST
	uLog.h
	strUtil.h
)
set(SRC_LIST
	strUtil.cpp
)

#ADD_DEFINITIONS( -g -W -Wall -D_REENTRANT -D_FILE_OFFSET_BITS=64 -DAC_HAS_INFO
#-DAC_HAS_WARNING -DAC_HAS_ERROR -DAC_HAS_CRITICAL -DTIXML_USE_STL
#-DAC_HAS_DEBUG -DLINUX_DAEMON -std=c++11)
ADD_DEFINITIONS(${COM_DEF})
#ADD_DEFINITIONS(-std=c++11)

#INCLUDE_DIRECTORIES(${DIR_I_LIB}/include)


#LINK_DIRECTORIES(${DIR_I_LIB}/lib)


set(NAME_PRJ
	util
	)

#ADD_XXXX必须在TARGET_LINK_LIBRARIES前面，否则会报错
#ADD_LIBRARY(${PROJECTNAME} SHARED/STATIC ${SRC_LIST})
#ADD_EXECUTABLE(${PROJECTNAME} ${SRC_LIST})
set(EXECUTABLE_OUTPUT_PATH "${DIR_O_BIN}/udp") #ok
ADD_LIBRARY(${NAME_PRJ} STATIC ${SRC_LIST})

#TARGET_LINK_LIBRARIES(${NAME_PRJ}
#	pthread
#	)
